# trend-quant

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  formula.txt  pyproject.toml  trend-quant-master.bundle  中国境内ETF全量梳理.xlsx
.claude/: settings.local.json
.codex/environments/: environment.toml
config/: app.yaml  instruments.yaml  strategy.yaml
config/rule_strategies/: close_above_sma20.yaml
data/backups/: trend_quant-20260720-230233-432026.db  trend_quant-20260720-230235-713759.db
docs/: Code_Wiki.md  PRD-trend-etf-system-v1.md  dsv4-flash-code-review-2026-07-21-2.md  dsv4-flash-code-review-2026-07-21.md  dsv4-pro-code-review-2026-07-21-2.md  dsv4-pro-code-review-2026-07-21.md  kimi-k3-indicator-unification-review-2.md  kimi-k3-indicator-unification-review.md  项目说明文档.md
docs/dev/: trend-etf-system-dev-spec-v1.md
docs/plans/: 2026-03-13-trend-etf-system-design.md  2026-07-08-configurable-rule-backtest-design.md  2026-07-19-indicator-unification-and-precompute-plan.md
outputs/etf_classification/: 中国境内ETF全量梳理_分类建议版_已排序.xlsx
param optim result/: 新建 XLSX 工作表.xlsx
scripts/: deploy.sh  import_industry_etfs.py  import_instrument_metadata_from_excel.py  import_preferred_etfs_from_excel.py  import_stock_pool_from_excel.py  migrate_json_to_sqlite.py  run_dev.ps1  tmp_check_efinance.py
src/: __init__.py
src/app/: __init__.py  instrument_display.py  main.py
src/audit/: __init__.py  app_logger.py  calc_logger.py
src/backtest/: __init__.py  backtest_engine.py  benchmark.py  metrics.py  optimization_engine.py  optimization_manager.py
src/core/: __init__.py  benchmarks.py  calendar.py  display.py  enums.py  indicators.py  jobs.py  scheduler.py  settings.py  trend.py  (+2 more)
tests/: conftest.py  test_data_service_tickflow_only.py  test_email_notifier.py  test_instrument_metadata.py  test_instruments_bulk_backfill.py  test_market_data_price_modes.py  test_market_view.py  test_provider_tickflow.py  test_rule_backtest_engine.py  test_subject_market.py
(+185 files in other folders)
