[project]
name = "trend-etf-system"
version = "0.1.0"
description = "A-share ETF trend trading system skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.6",
  "apscheduler>=3.11.0",
  "pandas>=2.3.0",
  "numpy>=2.2.0",
  "pyyaml>=6.0.2",
  "pyarrow>=21.0.0",
  "pydantic>=2.11.0",
  "email-validator>=2.2.0",
  "httpx>=0.28.0",
  "tickflow[all]==0.1.24",
  "chinese_calendar>=1.10.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: 单元测试（快速，无 IO）",
    "integration: 集成测试（真实类 + 隔离数据）",
    "api: API 测试（FastAPI TestClient）",
    "slow: 慢速测试（回测引擎全量运行等）",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "*/__init__.py", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "class .*Protocol",
]
